# libmediascan

./: .gitignore  APIs  AUTHORS  DESIGN  Makefile.am  Makefile.in  README  TODO  autogen.sh  config.h.in  configure  configure.ac  configure.scan  install-sh  libtool  win32_port.c
bindings/perl/: Changes  MANIFEST  MANIFEST.SKIP  Makefile.PL  README.win32  Scan.xs  typemap  winbuild.bat
bindings/perl/hints/: darwin.pl
bindings/perl/t/: 01use.t  async.t  basic.t
bindings/perl/xs/: Error.xs  Image.xs  Progress.xs  Result.xs  Video.xs
include/: Makefile.am  Makefile.in  libmediascan.h
lib/: db.h  db_config.h  db_cxx.h  db_int.h  dbstl_common.h  libmingwex.lib
libmediascan-0.2/: Makefile.in  config.h.in  configure  configure.ac
libmediascan-0.2/bindings/perl/: MANIFEST  Makefile.PL  README.win32  Scan.xs
libmediascan-0.2/include/: Makefile.in
libmediascan-0.2/test/data/: TODO
src/: Makefile.am  Makefile.am.BACKUP.4336.am  Makefile.in  NSString+SymlinksAndAliases.h  NSString+SymlinksAndAliases.m  audio.c  audio.h  buffer.c  buffer.h  common.h  database.c  database.h  error.c  error.h  fixed.h  folder_mon_win32.c  image.c  image.h  image_bmp.c  image_bmp.h  image_gif.c  image_gif.h  image_jpeg.c  image_jpeg.h  image_png.c  image_png.h  image_tiff.c  image_tiff.h  mediascan.c  mediascan.h  mediascan_file.c  mediascan_linux.c  mediascan_macos.c  mediascan_macos.m  mediascan_sun.c  mediascan_sunos.c  mediascan_unix.c  mediascan_win32.c  mediascan_win32.h  progress.c  (+23 more)
src/jenkins/: lookup3.c
src/libdlna/: audio_aac.c  audio_ac3.c  audio_amr.c  audio_atrac3.c  audio_g726.c  audio_lpcm.c  audio_mp1.c  audio_mp2.c  audio_mp3.c  audio_wma.c  av_mpeg1.c  av_mpeg2.c  av_mpeg4_part10.c  av_mpeg4_part2.c  av_wmv9.c  containers.c  dlna.h  dlna_internals.h  image_jpeg.c  image_png.c  profiles.c  profiles.h  upnp_dms.c
test/: Makefile.am  Makefile.in  api_test.c  api_thumbnail_test.c  common.h  debug.sh  image_test.c  scan_test.c  tap.c  test.c  test.vcxproj  test.vcxproj.filters  test_background.c  test_defects.c  test_images.c  video_dlna_test.c  video_dlna_test.vcxproj  video_dlna_test.vcxproj.filters  win32.h
test/CUnit/: COPYING  CUnit.spec  ChangeLog  Jamrules  Jamrules.in  Makefile.am  Makefile.in  NEWS  README  configure  cunit.pc  libtool
test/CUnit/CUnit/: Makefile.in
test/CUnit/CUnit/Headers/: CUnit.h.in  Makefile.in
test/CUnit/CUnit/Sources/: Makefile.am  Makefile.in
test/CUnit/CUnit/Sources/Automated/: Makefile.in
test/CUnit/CUnit/Sources/Basic/: Makefile.in
test/CUnit/CUnit/Sources/Console/: Makefile.in
test/CUnit/CUnit/Sources/Curses/: Makefile.in
test/CUnit/CUnit/Sources/Framework/: Makefile.in
test/CUnit/CUnit/Sources/Test/: Makefile.in
test/CUnit/Examples/: Makefile.am  Makefile.in
test/CUnit/Examples/AutomatedTest/: Makefile.in
test/CUnit/Examples/BasicTest/: Makefile.in
test/CUnit/Examples/ConsoleTest/: Makefile.in
test/CUnit/Examples/CursesTest/: Makefile.in
test/CUnit/Examples/WinTest/: ReadMe.txt  WinTest.cpp  WinTest.dsp
test/CUnit/Man/man3/: CUnit.3
test/CUnit/Share/: CUnit-List.dtd  md2xml.pl
test/CUnit/doc/: error_handling.html  fdl.html  introduction.html  managing_tests.html  running_tests.html  test_registry.html  writing_tests.html
test/CUnit/doc/headers/: CUnit.h
test/data/: TODO  bars-wmv2-wmav2.avi
test/data/defect_19701/: 00003.MTS  H.263.780kbps.MP3.64kbps.flv
test/data/defect_20557/: Man_to_man_220k_MOV.mov
test/data/recursion3/folder2/: MPEG_PS_NTSC-ac3.mpg
test/data/video/: bars-mpeg1video-mp2.mpg  bars-mpeg2video-mp2.vob  bars-mpeg4-aac.m4v  bars-mpeg4-mp2.avi  bars-mpeg4-mp2.mkv  bars-msmpeg4.avi  bars-msmpeg4v1.avi  bars-wmv1-wmav1.avi
test/data/video/linuxshortcuts/: dlna_rel.symlink
test/data/video/macshortcuts/: avi_link  dlna  dlna_link2  dnla_link1
test/data/video/shortcuts/: dlna - Shortcut.lnk  test.lnk
tools/: indent.sh
win32/: libmediascan.sln  libmediascan.vcxproj  libmediascan.vcxproj.filters  win32_build_instructions.txt  zlib.props
win32/faac-1.28/: config.h.in
win32/faac-1.28/libfaac/: libfaac.vcxproj  libfaac.vcxproj.filters
win32/faad2-2.7/libfaad/: libfaad.vcxproj  libfaad.vcxproj.filters
win32/ffmpeg/: bash.exe.stackdump  myconfig  pax_global_header
win32/giflib-4.1.6/: AUTHORS  ChangeLog  NEWS  configure.ac
win32/include/: unistd.h  win32config.h
win32/jpeg-8a/: install.txt  jpeg.sln  jpeg.vcxproj  jpeg.vcxproj.filters
win32/libdca-0.0.5/: Makefile.am  acinclude.m4  bootstrap  config.h.in  configure.ac
win32/libdca-0.0.5/include/: Makefile.am
win32/libdca-0.0.5/libao/: Makefile.am  audio_out.c  audio_out_aif.c  audio_out_al.c  audio_out_float.c  audio_out_internal.h  audio_out_null.c  audio_out_oss.c  audio_out_peak.c  audio_out_solaris.c  audio_out_wav.c  audio_out_win.c  convert2s16.c
win32/libdca-0.0.5/libdca/: Makefile.am  configure.incl  libdca.pc  libdca.pc.in  libdts.pc  libdts.pc.in
win32/libdca-0.0.5/src/: Makefile.am  configure.incl  dcadec.1  extract_dca.1
win32/libdca-0.0.5/test/: Makefile.am  compare.c  globals  regression
win32/libdca-0.0.5/vc++/: Makefile.am  dcadec.dsp  dcadec.dsw  libdca.dsp
win32/libpng-1.5.2/: Makefile.am  autogen.sh  libpng-config  libpng.pc  libpng.sym  libpng15.pc  libtool  pnglibconf.dfn
win32/libvorbis-1.3.2/: myconfig
win32/pthreads.2/: ANNOUNCE  BUGS  Bmakefile  ChangeLog  FAQ  GNUmakefile  NEWS  Nmakefile.tests  README.Borland  README.NONPORTABLE  WinCE-PORT  create.c  dll.c  errno.c  exit.c  global.c  implement.h  mutex.c  pthread.c  pthread.dsp  pthread.h  pthread.sln  pthread.vcxproj  pthread.vcxproj.filters  pthreadVC2.exp  pthreadVC2.lib  pthread_attr_getdetachstate.c  pthread_attr_getinheritsched.c  pthread_attr_getschedpolicy.c  pthread_attr_getscope.c  pthread_attr_getstackaddr.c  pthread_attr_getstacksize.c  pthread_attr_init.c  pthread_attr_setscope.c  pthread_attr_setstackaddr.c  pthread_attr_setstacksize.c  pthread_barrier_destroy.c  pthread_barrier_init.c  pthread_barrier_wait.c  pthread_cancel.c  (+67 more)
win32/xvidcore/: AUTHORS  ChangeLog-1.0  CodingStyle  TODO
(+174 files in other folders)
